# python-scripts

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: name-lexicon-implementation.md
output/: README.md  name-detector.test.ts  name-detector.ts
scripts/: example.py  extract_names.py
scripts/utils/: __init__.py
